// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHue accepts a hex value 1`] = `
<div>
  <div
    class="euiHue testClass1 testClass2 emotion-euiHue-euiTestCss"
  >
    <label
      class="emotion-euiScreenReaderOnly"
      for="undefined-hue"
    >
      Select the HSV color mode 'hue' value
    </label>
    <span
      class="euiToolTipAnchor  emotion-euiToolTipAnchor-inlineBlock-euiHue__tooltip"
    >
      <input
        aria-label="aria-label"
        aria-roledescription="Hue slider"
        aria-valuetext="Hue 180°"
        class="euiHue__range emotion-euiHue__range"
        data-test-subj="test subject string"
        id="undefined-hue"
        max="359"
        min="0"
        step="1"
        type="range"
        value="180"
      />
    </span>
  </div>
</div>
`;

exports[`EuiHue accepts a hue value 1`] = `
<div>
  <div
    class="euiHue testClass1 testClass2 emotion-euiHue-euiTestCss"
  >
    <label
      class="emotion-euiScreenReaderOnly"
      for="undefined-hue"
    >
      Select the HSV color mode 'hue' value
    </label>
    <span
      class="euiToolTipAnchor  emotion-euiToolTipAnchor-inlineBlock-euiHue__tooltip"
    >
      <input
        aria-label="aria-label"
        aria-roledescription="Hue slider"
        aria-valuetext="Hue 180°"
        class="euiHue__range emotion-euiHue__range"
        data-test-subj="test subject string"
        id="undefined-hue"
        max="359"
        min="0"
        step="1"
        type="range"
        value="180"
      />
    </span>
  </div>
</div>
`;

exports[`EuiHue is rendered 1`] = `
<div>
  <div
    class="euiHue testClass1 testClass2 emotion-euiHue-euiTestCss"
  >
    <label
      class="emotion-euiScreenReaderOnly"
      for="undefined-hue"
    >
      Select the HSV color mode 'hue' value
    </label>
    <span
      class="euiToolTipAnchor  emotion-euiToolTipAnchor-inlineBlock-euiHue__tooltip"
    >
      <input
        aria-label="aria-label"
        aria-roledescription="Hue slider"
        aria-valuetext="Hue 1°"
        class="euiHue__range emotion-euiHue__range"
        data-test-subj="test subject string"
        id="undefined-hue"
        max="359"
        min="0"
        step="1"
        type="range"
        value="1"
      />
    </span>
  </div>
</div>
`;
